# plover_controller

./: MANIFEST.in  README.md  setup.cfg
docs/: config.md
plover_controller/: config.py  machine.py  test_util.py  util.py
plover_controller/assets/: default_mapping.txt
