[metadata]
name = plover-controller
version = 0.0.8
description = Controller support for Plover
author = Tadeo Kondrak
author_email = me@tadeo.ca
license = GNU General Public License v2 or later (GPLv2+)
url = https://github.com/tadeokondrak/plover_controller
keywords = plover plover_plugin
long_description = file: README.md
long_description_content_type = text/markdown

[options]
zip_safe = True
setup_requires =
    setuptools>=30.3.0
packages =
    plover_controller
install_requires =
    plover>=4.0.0.dev10
    PySDL2
    pysdl2-dll;platform_system!='Linux'

include_package_data = True

[options.entry_points]
plover.machine =
    Controller = plover_controller.machine:ControllerMachine
plover.gui.qt.machine_option =
    plover_controller.machine:ControllerMachine = plover_controller.machine:ControllerOption
